Fix marquee SVG spacing

--- a/app/globals.css
+++ b/app/globals.css
@@ -1979,6 +1979,7 @@ select {
 
 .h-marquee_track {
   display: flex;
+  gap: clamp(18px, 2vw, 34px);
   width: max-content;
   will-change: transform;
   animation: hMarqueeMove 56s linear infinite;
@@ -1987,6 +1988,7 @@ select {
 .h-marquee_inner {
   display: flex;
   flex: 0 0 auto;
+  gap: clamp(18px, 2vw, 34px);
   align-items: center;
 }
 
@@ -2007,7 +2009,7 @@ select {
 }
 
 .h-marquee_item.is-r {
-  margin-left: clamp(-120px, -7vw, -64px);
+  margin-left: 0;
   background-image: url("/primora/home-marquee-r.svg");
 }
 
